# weft-operator

./: .gitignore  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  go.mod  go.sum  tools.go
.gemini/: settings.json
.github/workflows/: bazel-release.yml  integration.yml  release.yml  test.yml
api/v1alpha1/: BUILD.bazel  aquaducttaas_types.go  groupversion_info.go  weftgateway_types.go  weftserver_types.go  wefttunnel_types.go
chart/: .helmignore  BUILD.bazel  Chart.yaml  values.yaml
chart/templates/: BUILD.bazel  _helpers.tpl  deployment.yaml  rbac.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
chart/templates/crds/: BUILD.bazel  README.md
cmd/: BUILD.bazel  main.go
e2e/: BUILD.bazel  e2e_test.go  kind-config.yaml
internal/controller/: BUILD.bazel  suite_test.go
internal/controller/aquaducttaas/: BUILD.bazel  reconciler.go
internal/controller/weftgateway/: BUILD.bazel  reconciler.go  reconciler_test.go  suite_test.go
internal/controller/weftingress/: BUILD.bazel  reconciler.go  reconciler_test.go  suite_test.go
internal/controller/weftserver/: BUILD.bazel  node_prober.go  node_prober_process_node_test.go  node_prober_test.go  reconciler.go  reconciler_test.go  suite_test.go
internal/controller/wefttunnel/: BUILD.bazel  reconciler.go  reconciler_status_test.go  reconciler_test.go  suite_test.go
internal/resource/: BUILD.bazel  resource.go
scripts/: run-e2e.sh  setup-pre-commit-hook.sh
tools/controller-gen/: BUILD.bazel  defs.bzl
tools/envtest/: .gitattributes  etcd  kube-apiserver
