load("@rules_helm//helm:defs.bzl", "helm_chart")



helm_chart(
    name = "weft_operator",
    chart = "Chart.yaml",
    crds = [
        "//api/v1alpha1:generated.crds",
        "//chart/templates/crds:gateway_crds",
    ],
    images = ["//cmd:weft_operator_image_push"],
    registry_url = "oci://ghcr.io/aquaduct-dev/charts",
    templates = ["//chart/templates"],
    upgrade_opts = [
        "--namespace=weft-system",
        "--install",
    ],
    values = "values.yaml",
    visibility = ["//visibility:public"],
)
