load("@rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_load", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "aquaduct.dev/weft-operator/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//api/v1alpha1",
        "//internal/controller/aquaducttaas",
        "//internal/controller/weftgateway",
        "//internal/controller/weftserver",
        "//internal/controller/wefttunnel",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/util/runtime",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//plugin/pkg/client/auth",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/healthz",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
        "@io_k8s_sigs_controller_runtime//pkg/metrics/server",
        "@io_k8s_sigs_gateway_api//apis/v1:apis",
    ],
)

go_binary(
    name = "cmd_raw",
    embed = [":cmd_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "cmd",
    platform = "@rules_go//go/toolchain:linux_amd64",
    target = ":cmd_raw",
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "cmd_arm64",
    platform = "@rules_go//go/toolchain:linux_arm64",
    target = ":cmd_raw",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "layer_amd64",
    srcs = [":cmd"],
)

pkg_tar(
    name = "layer_arm64",
    srcs = [":cmd_arm64"],
)

oci_image(
    name = "weft_operator_image_amd64",
    base = "@alpine_linux_amd64",
    entrypoint = ["/cmd"],
    tars = [":layer_amd64"],
)

oci_image(
    name = "weft_operator_image_arm64",
    base = "@alpine_linux_arm64_v8",
    entrypoint = ["/cmd_arm64"],
    tars = [":layer_arm64"],
)

oci_image_index(
    name = "weft_operator_image",
    images = [
        ":weft_operator_image_amd64",
        ":weft_operator_image_arm64",
    ],
)

oci_push(
    name = "weft_operator_image_push",
    image = ":weft_operator_image",
    repository = "ghcr.io/aquaduct-dev/weft-operator",
    visibility = ["//visibility:public"],
)

oci_load(
    name = "weft_operator_image_load",
    image = ":weft_operator_image_amd64",
    repo_tags = ["ghcr.io/aquaduct-dev/weft-operator:latest"],
    # For local development, it's often useful to have an alias to load into Docker.
    # The image will be tagged as ghcr.io/aquaduct-dev/weft-operator:latest in the local docker daemon.
)