load("@rules_go//go:def.bzl", "go_library")
load("//tools/controller-gen:defs.bzl", "controller_gen")

controller_gen(
    name = "generated",
    srcs = [
        ":api_types",
        "//internal/controller/aquaducttaas:srcs",
        "//internal/controller/weftgateway:srcs",
        "//internal/controller/weftserver:srcs",
        "//internal/controller/wefttunnel:srcs",
        "//internal/resource:srcs",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "api_types",
    srcs = glob(
        ["*.go"],
        exclude = ["zz_generated.deepcopy.go"],
    ),
    visibility = ["//visibility:public"],
)

go_library(
    name = "v1alpha1",
    srcs = [
        "aquaducttaas_types.go",
        "groupversion_info.go",
        "weftgateway_types.go",
        "weftserver_types.go",
        "wefttunnel_types.go",
        "zz_generated.deepcopy.go",
    ],
    importpath = "aquaduct.dev/weft-operator/api/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_sigs_controller_runtime//pkg/scheme",
    ],
)
