genrule(
    name = "copy_role",
    srcs = ["//api/v1alpha1:generated.rbac"],
    outs = ["role.yaml"],
    visibility = ["//visibility:public"],
    cmd = "cp $< $@",
)

exports_files([
    "deployment.yaml",
    "rolebinding.yaml",
    "serviceaccount.yaml",
    "_helpers.tpl",
])

filegroup(
    name = "templates",
    srcs = glob(["*.yaml"]) + [":copy_role"],
    visibility = ["//visibility:public"],
)
