genrule(
    name = "copy_role",
    srcs = ["//api/v1alpha1:generated.rbac"],
    outs = ["role.yaml"],
    cmd = "cp $< $@",
    visibility = ["//visibility:public"],
)

exports_files([
    "deployment.yaml",
    "rolebinding.yaml",
    "serviceaccount.yaml",
    "_helpers.tpl",
])

filegroup(
    name = "templates",
    srcs = glob(["*.yaml"]) + [":copy_role"],
    visibility = ["//visibility:public"],
)
