load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "controller_test",
    srcs = ["suite_test.go"],
    data = [
        "//api/v1alpha1:generated.crds",
        "//chart/templates/crds:gateway_crds",
    ],
    deps = [
        "//api/v1alpha1",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//rest",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/envtest",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
    ],
)
