load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "resource",
    srcs = ["resource.go"],
    importpath = "aquaduct.dev/weft-operator/internal/resource",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob(["*.go"]),
    visibility = ["//visibility:public"],
)
