load("//tools/controller-gen:defs.bzl", "controller_gen")

controller_gen(
    name = "generated",
    srcs = [
        "//:go.mod",
        "//:go.sum",
        "//api/v1alpha1:api_types",
        "//internal/controller/aquaducttaas:srcs",
        "//internal/controller/weftgateway:srcs",
        "//internal/controller/weftserver:srcs",
        "//internal/controller/wefttunnel:srcs",
    ],
    args = [
        "paths=./api/v1alpha1",
        "paths=./internal/controller/aquaducttaas",
        "paths=./internal/controller/weftgateway",
        "paths=./internal/controller/weftserver",
        "paths=./internal/controller/wefttunnel",
    ],
    crd_outs = [
        "weft.aquaduct.dev_aquaducttaases.yaml",
        "weft.aquaduct.dev_weftgateways.yaml",
        "weft.aquaduct.dev_weftservers.yaml",
        "weft.aquaduct.dev_wefttunnels.yaml",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "gateway_crds",
    srcs = ["gateway-api.yaml"],
    visibility = ["//visibility:public"],
)
