load("@rules_go//go:def.bzl", "go_library", "go_test")

filegroup(
    name = "srcs",
    srcs = glob(["*.go"]),
    visibility = ["//visibility:public"],
)

go_library(
    name = "weftgateway",
    srcs = ["reconciler.go"],
    importpath = "aquaduct.dev/weft-operator/internal/controller/weftgateway",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha1",
        "//internal/resource",
        "@io_k8s_apimachinery//pkg/api/meta",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/controller/controllerutil",
        "@io_k8s_sigs_controller_runtime//pkg/handler",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile",
        "@io_k8s_sigs_gateway_api//apis/v1:apis",
    ],
)

go_test(
    name = "weftgateway_test",
    srcs = [
        "reconciler_test.go",
        "suite_test.go",
    ],
    data = [
        "//chart/templates/crds:gateway_crds",
        "//chart/templates/crds:generated.crds",
    ],
    env = {
        "KUBEBUILDER_ASSETS": "/home/rohit/.local/share/kubebuilder-envtest/k8s/1.29.0-linux-amd64",
    },
    deps = [
        ":weftgateway",
        "//api/v1alpha1",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//rest",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/envtest",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
        "@io_k8s_sigs_gateway_api//apis/v1:apis",
        "@io_k8s_sigs_controller_runtime//pkg/metrics/server",
    ],
)
